# vultr-api

./: Cargo.toml  README.md
src/: lib.rs
src/client/: account.rs  billing.rs  dns.rs  instance.rs  mod.rs
src/dto/: account_dto.rs  billing_dto.rs  dns_dto.rs  instance_dto.rs  meta_dto.rs  mod.rs
