[package]
name = "vultr-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = { version = "1.0.108", optional = true }

anyhow = { version = "1.0.75", optional = true }

# http client
reqwest = { version = "0.11.22", features = ["json"], optional = true }

[features]
client = ["serde_json", "anyhow", "reqwest"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
