[package]
name = "vultr-api"
version = "0.1.0"
authors = [
  "yybit <yybit2@gmail.com>",
]
license = "MIT"
homepage = "https://github.com/yybit/vultr-api"
repository = "https://github.com/yybit/vultr-api"
description = "rust library for rust api client"
readme = "README.md"
edition = "2021"
keywords = ["vultr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = { version = "1.0.108", optional = true }

anyhow = { version = "1.0.75", optional = true }

# http client
reqwest = { version = "0.11.22", features = ["json"], optional = true }

[features]
client = ["serde_json", "anyhow", "reqwest"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
